js/src/tests/test262/built-ins/Error/prototype/constructor/prop-desc.js
verifyProperty
(
Error
.
prototype
'
constructor
'
{
enumerable
:
false
writable
:
true
configurable
:
true
value
:
Error
}
)
;
reportCompare
(
0
0
)
;
